[package]
name = "mulink-dsp"
version = "0.1.0"
edition = "2021"

[lib]
name = "mulink_dsp"
path = "src/lib.rs"
crate-type = ["lib", "cdylib", "staticlib"]


[dependencies]
cpal = "*"
hound = "*"
wavers = "*"
num = "*"
rustfft = "*"
chrono = "0.4.41"
rkyv = "0.8.10"
env_logger = "0.11.8"
log = "0.4.27"
base64 = "0.22.1"
bitflags = "2.9.1"
anyhow = "*"
crossbeam = "0.8.4"
itertools = "0.14.0"
clippy = "0.0.302"
rand = "0.9.2"
#raylib = { version = "5.0" }
[dependencies.plotters]
version = "*"
features = ["colormaps"]
[dependencies.clap]
version = "*"
features = ["derive"]


[workspace.metadata.cross.target.aarch64-unknown-linux-gnu]
# Install libssl-dev:arm64, see <https://github.com/cross-rs/cross/blob/main/docs/custom_images.md#adding-dependencies-to-existing-images>
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt-get update && apt-get --assume-yes install xserver-xorg-dev:$CROSS_DEB_ARCH libx11-dev:$CROSS_DEB_ARCH libfontconfig-dev:$CROSS_DEB_ARCH fontconfig:$CROSS_DEB_ARCH libfreetype-dev:$CROSS_DEB_ARCH libasound2-dev:$CROSS_DEB_ARCH",
]
